--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           colors: {
             navy: '#0A1F44',
             charcoal: '#1E1B1A',
-            accent: '#882222', 
-            warmGray: '#CFC7BF',
+            accent: '#7A1D1F', 
+            warmGray: '#A89F94',
 
           },
         fontFamily: {
@@ -36,10 +36,10 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="relative min-h-screen flex items-center justify-center font-hero">
-    <img src="assets/IMG_0806-1080-1076.jpg" alt="Hero" class="absolute inset-0 w-full h-full object-cover ">
+  <section class="relative min-h-screen flex items-center justify-center font-hero ">
+    <img src="assets/IMG_0806-1080-1076.jpg" alt="Hero" class="absolute inset-0 w-full h-full object-cover" style="filter: blur(1.5px);">
     <div class="absolute inset-0 bg-black/65"></div> <!-- dark overlay -->
-    <h1 class="text-7xl text-accent z-10">Be the best.</h1>
+    <h1 class="text-7xl text-accent z-10 -translate-y-16">Be the best.</h1>
   </section>
 
   <!-- Copy Section -->
