--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="bg-charcoal text-white">
   <!-- Title Bar -->
-  <header class="w-full p-6 text-warmGray font-extrabold tracking-luxury font-heading text-lg">
+  <header class="w-full p-6 text-warmGray font-extrabold tracking-luxury font-heading text-xl">
     Best Point Consulting
   </header>
 
@@ -44,10 +44,12 @@
 
   <!-- Copy Section -->
   <section class="bg-charcoal text-gray-300 py-32 px-6">
-    <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-6">About Best Point Consulting</h2>
+    <div class="max-w-3xl mx-auto text-center space-y-6">
+      <h2 class="text-3xl font-semibold mb-10">About Best Point Consulting</h2>
       <p class="text-lg leading-relaxed">
-        Blah reeeee
+        At best point consulting we develop engineering communication and technical strategies.
+        Consulting across domains and tech stacks, we focus on how improved decision making and technical judgement can eliminate waste and empower your teams. </p>
+        <p class="text-lg leading-relaxed">We work with your people for a personalized experience.
       </p>
     </div>
   </section>
