Darken business name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             navy: '#0A1F44',
             charcoal: '#1E1B1A',
             accent: '#7A1D1F', 
-            warmGray: '#A89F94',
+            warmGray: '#7F7469',
 
           },
         fontFamily: {
