--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="max-w-3xl mx-auto text-center space-y-6">
       <h2 class="text-3xl font-semibold mb-10">About Best Point Consulting</h2>
       <p class="text-lg leading-relaxed">
-        At best point consulting we develop engineering communication and technical strategies.
+        At Best Point Consulting we develop engineering communication and technical strategies.
         Consulting across domains and tech stacks, we focus on how improved decision making and technical judgement can eliminate waste and empower your teams. </p>
         <p class="text-lg leading-relaxed">We work with your people for a personalized experience.
       </p>
